# meteo-local

./: README.md  app.py  etl.py  pyproject.toml  streamlit_app.py
.github/workflows/: pr-checks.yml  python-app.yml  shots.yml
data/2022/04/: meteolocal-2022-04-13.parquet
meteo_local/: plots.py  transformer.py
meteobeguda/: parser.py  plots.py  transformer.py
tests/: conftest.py  test_fetcher.py  test_parser.py  test_transformer.py
