[tool.poetry]
name = "meteobeguda"
version = "0.1.0"
description = ""
authors = ["Alberto Camara <camara@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
pandas = "^1.4.1"
numpy = "^1.22.3"
streamlit = "^1.7.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
mypy = "^0.940"
requests-mock = "^1.9.3"
hypothesis = {extras = ["numpy"], version = "^6.39.3"}
pytest-cov = "^3.0.0"
black = "^22.1.0"
types-requests = "^2.27.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
