[tool.poetry]
name = "meteo-local"
version = "0.1.0"
description = ""
authors = ["Alberto Camara <camara@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
pandas = "^1.4.1"
numpy = "^1.22.3"
streamlit = "^1.7.0"
typer = "^0.4.0"
plotly-express = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
requests-mock = "^1.9.3"
black = "^22.1.0"
types-requests = "^2.27.12"
flake8 = "^4.0.1"
bandit = "^1.7.4"
hypothesis = "^6.39.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
